--- a/views/users/shopdetail.ejs
+++ b/views/users/shopdetail.ejs
@@ -65,12 +65,20 @@
                     </div>
                     <div class="clearfix product-price-cover">
                       <div class="product-price primary-color float-left">
-                        <ins><span class="text-brand"><%= product.price %></span></ins>
-                        <% if (product.oldPrice) { %>
-                          <ins><span class="old-price font-md ml-15"><%= product.oldPrice %></span></ins>
-                        <% } %>
-                        <% if (product.discount) { %>
-                          <span class="save-price  font-md color3 ml-15"><%= product.discount %>% Off</span>
+                        <% 
+                          let lowestPrice = product.price;
+                          if (product.discountPrice > 0 && product.discountPrice < lowestPrice) {
+                            lowestPrice = product.discountPrice;
+                          }
+                          if (product.categoryDiscountPrice > 0 && product.categoryDiscountPrice < lowestPrice) {
+                            lowestPrice = product.categoryDiscountPrice;
+                          }
+                        %>
+                        <% if (lowestPrice < product.price) { %>
+                          <ins><span class="text-brand new-price"><%= lowestPrice %></span></ins>
+                          <ins><span class="old-price font-md ml-15"><%= product.price %></span></ins>
+                        <% } else { %>
+                          <ins><span class="text-brand"><%= product.price %></span></ins>
                         <% } %>
                       </div>
                     </div>
